--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "electron-vue-template",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "main": "background.js",
     "author": "CitRUS",
     "private": true,
@@ -9,24 +9,24 @@
         "build": "vue-cli-service electron:build"
     },
     "dependencies": {
-        "lodash": "^4.17.11",
+        "lodash": "^4.17.15",
         "material-design-icons-iconfont": "^5.0.1",
         "vue": "^2.6.10",
-        "vue-router": "^3.0.6",
-        "vuetify": "^1.5.16",
+        "vue-router": "^3.1.2",
+        "vuetify": "^2.0.10",
         "vuex": "^3.1.1",
         "vuex-pathify": "^1.2.4"
     },
     "devDependencies": {
-        "@vue/cli-plugin-babel": "^3.8.0",
-        "@vue/cli-service": "^3.8.4",
-        "electron": "^5.0.5",
+        "@vue/cli-plugin-babel": "^3.11.0",
+        "@vue/cli-service": "^3.11.0",
+        "electron": "5.0.10",
         "electron-localshortcut": "^3.1.0",
-        "node-sass": "^4.12.0",
         "pug": "^2.0.4",
         "pug-plain-loader": "^1.0.0",
-        "sass-loader": "^7.1.0",
-        "vue-cli-plugin-electron-builder": "^1.3.5",
+        "sass": "^1.22.10",
+        "sass-loader": "^7.3.1",
+        "vue-cli-plugin-electron-builder": "1.3.6",
         "vue-template-compiler": "^2.6.10"
     }
 }
