--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "electron-vue-template",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "main": "background.js",
     "author": "CitRUS",
     "private": true,
@@ -13,18 +13,18 @@
         "material-design-icons-iconfont": "^5.0.1",
         "vue": "^2.6.10",
         "vue-router": "^3.1.3",
-        "vuetify": "^2.0.14",
+        "vuetify": "^2.0.18",
         "vuex": "^3.1.1",
-        "vuex-pathify": "^1.2.4"
+        "vuex-pathify": "^1.4.0"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "^3.11.0",
         "@vue/cli-service": "^3.11.0",
-        "electron": "5.0.10",
+        "electron": "5.0.11",
         "electron-localshortcut": "^3.1.0",
         "pug": "^2.0.4",
         "pug-plain-loader": "^1.0.0",
-        "sass": "1.22.10",
+        "sass": "^1.22.12",
         "sass-loader": "7.3.1",
         "vue-cli-plugin-electron-builder": "1.3.6",
         "vue-template-compiler": "^2.6.10"
