--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "electron-vue-template",
-    "version": "0.0.5",
+    "version": "0.0.6",
     "main": "background.js",
     "author": "CitRUS",
     "private": true,
@@ -9,24 +9,26 @@
         "build": "vue-cli-service electron:build"
     },
     "dependencies": {
+        "fs-extra": "^8.1.0",
         "lodash": "^4.17.15",
         "material-design-icons-iconfont": "^5.0.1",
+        "uniqid": "^5.0.3",
         "vue": "^2.6.10",
         "vue-router": "^3.1.3",
-        "vuetify": "^2.0.18",
+        "vuetify": "2.0.20",
         "vuex": "^3.1.1",
         "vuex-pathify": "^1.4.0"
     },
     "devDependencies": {
-        "@vue/cli-plugin-babel": "^3.11.0",
-        "@vue/cli-service": "^3.11.0",
+        "@vue/cli-plugin-babel": "^3.12.0",
+        "@vue/cli-service": "^3.12.0",
         "electron": "5.0.11",
         "electron-localshortcut": "^3.1.0",
         "pug": "^2.0.4",
         "pug-plain-loader": "^1.0.0",
-        "sass": "^1.22.12",
-        "sass-loader": "7.3.1",
-        "vue-cli-plugin-electron-builder": "1.3.6",
+        "sass": "^1.23.0",
+        "sass-loader": "^8.0.0",
+        "vue-cli-plugin-electron-builder": "^1.4.0",
         "vue-template-compiler": "^2.6.10"
     }
 }
